# riftoracle

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  model.ipynb  pyproject.toml
.github/workflows/: ci.yml
data-collection/: README.md  Untitled-2.ipynb  from genson import SchemaBuilder.py  match-data-structure.json  match-scraper-aws.py  match-scraper.ipynb  match_ids.csv  state.json
data-collection/matches/bronze/I/: NA1_5236983640.json
data-collection/matches/bronze/II/: NA1_5218334195.json
data-collection/matches/bronze/III/: NA1_5211575043.json
data-collection/matches/bronze/IV/: NA1_5210384604.json
data-collection/matches/diamond/I/: NA1_5226744126.json
data-collection/matches/diamond/II/: NA1_5232291724.json
data-collection/matches/diamond/III/: NA1_5235797685.json
data-collection/matches/diamond/IV/: NA1_5235959527.json
data-collection/matches/emerald/I/: NA1_5235375280.json
data-collection/matches/emerald/II/: NA1_5236913538.json
data-collection/matches/emerald/III/: NA1_5237306986.json
data-collection/matches/emerald/IV/: NA1_5226835049.json
data-collection/matches/gold/I/: NA1_5222606883.json
data-collection/matches/gold/II/: NA1_5233811010.json
data-collection/matches/gold/III/: NA1_5237262079.json
data-collection/matches/gold/IV/: NA1_5236784695.json
data-collection/matches/iron/I/: NA1_5202822506.json  NA1_5202853155.json  NA1_5203197210.json  NA1_5203239141.json  NA1_5203272627.json  NA1_5203304660.json  NA1_5203383094.json  NA1_5203390994.json  NA1_5203416163.json  NA1_5203474114.json  NA1_5203484082.json  NA1_5203494334.json  NA1_5203537495.json  NA1_5203542471.json  NA1_5203639022.json  NA1_5203857929.json  NA1_5204090304.json  NA1_5204141574.json  NA1_5204170846.json  NA1_5204172548.json  NA1_5204184498.json  NA1_5204190385.json  NA1_5204209085.json  NA1_5204394141.json  (+975 more)
scripts/: train_baselines.py
src/riftoracle/: __init__.py  collect.py  data.py  features.py  models.py  training.py
tests/: test_collect.py  test_data.py  test_features.py  test_training.py
tests/fixtures/: sample_match.json
(+3007 files in other folders)
