[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riftoracle"
version = "0.1.0"
description = "League of Legends win chance modeling toolkit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "RiftOracle Contributors"},
]
keywords = ["league-of-legends", "machine-learning", "riot-api", "win-probability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.3",
]
collector = [
  "requests>=2.31",
]

[project.scripts]
riftoracle-collect = "riftoracle.collect:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = [
  "*.ipynb",
  "data-collection/from genson import SchemaBuilder.py",
]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
packages = ["riftoracle"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
